# gen-ai-examples

./: README.md  faq.md  prerequisites.md  setting-python-interpreter.md
examples/aip-agent-quickstart/: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  hello_world_a2a_google_adk_client.py  hello_world_a2a_google_adk_client_agent.py  hello_world_a2a_google_adk_client_streaming.py  hello_world_a2a_langchain_client.py  hello_world_a2a_langchain_client_agent.py  hello_world_a2a_langchain_client_streaming.py  hello_world_a2a_langgraph_client.py  hello_world_a2a_langgraph_client_agent.py  hello_world_a2a_langgraph_client_streaming.py  hello_world_a2a_langgraph_docker_client.py  hello_world_a2a_langgraph_server.py  hello_world_arxiv_langgraph_mcp_sse.py  hello_world_google_adk.py  hello_world_google_adk_mcp_sse.py  hello_world_google_adk_mcp_sse_stream.py  hello_world_google_adk_mcp_stdio.py  hello_world_google_adk_mcp_stdio_stream.py  hello_world_langchain.py  hello_world_langchain_mcp_sse.py  hello_world_langchain_mcp_sse_stream.py  hello_world_langchain_mcp_stdio.py  hello_world_langchain_mcp_stdio_stream.py  hello_world_langchain_stream.py  hello_world_langgraph.py  hello_world_langgraph_agent.py  hello_world_langgraph_bosa_twitter.py  hello_world_langgraph_mcp_sse.py  hello_world_langgraph_mcp_sse_stream.py  hello_world_langgraph_mcp_stdio.py  hello_world_langgraph_mcp_stdio_stream.py  hello_world_multi_agent_google_adk.py  hello_world_multi_agent_langchain.py  hello_world_multi_agent_langgraph.py  hello_world_multi_agent_langraph.py  hello_world_research_agent.py  hello_world_switch_openai_compatible_mode.py  (+2 more)
examples/aip-agent-quickstart/aip_agent_quickstart/: __init__.py
examples/aip-agent-quickstart/aip_agent_quickstart/config/: __init__.py  agent.py
examples/aip-agent-quickstart/aip_agent_quickstart/mcp_configs/: configs.py
examples/aip-agent-quickstart/aip_agent_quickstart/mcp_server_docker/: Dockerfile  docker-compose.yml
examples/aip-agent-quickstart/aip_agent_quickstart/mcp_servers/: mcp_server_sse.py  mcp_server_stdio.py
examples/aip-agent-quickstart/aip_agent_quickstart/tools/: __init__.py  adk_arithmetic_tools.py  adk_weather_tool.py  bosa_twitter_tools.py  langchain_arithmetic_tools.py  langchain_weather_tool.py  twitter_bosa_tool.py  weather_tool.py
examples/aip-agent-quickstart/aip_agent_quickstart/utils/: __init__.py  agent_helpers.py
examples/custom-gllm-backend/: README.md  pyproject.toml
examples/custom-gllm-backend/custom_gllm_backend/: __init__.py  main.py
examples/custom-pipeline/: .env.example  .gitignore  README.md  guide.md  local-start.bat  local-start.sh  main.py  main_mcp.py  pyproject.toml
examples/custom-pipeline/claudia_gpt/: __init__.py  config.yaml  founding.md  pipeline.py  preset_config.py  runtime_config.py  state.py
examples/custom-pipeline/claudia_gpt/anonymizer/: anonymizer_storage.py  models.py  schemas.py
examples/custom-pipeline/claudia_gpt/chat_history/: __init__.py  chat_history_storage.py  constants.py  models.py  schemas.py
examples/custom-pipeline/claudia_gpt/component/: __init__.py  catapa_query_transformer.py  chat_history_manager.py
examples/custom-pipeline/claudia_gpt/components/: __init__.py  catapa_query_transformer.py  chat_history_manager.py
examples/custom-pipeline/claudia_gpt/config/: constant.py  supported_models.py
examples/custom-pipeline/claudia_gpt/constant/: agent_type.py
examples/custom-pipeline/claudia_gpt/db/: __init__.py  adapter.py  constant.py  database.py  database_factory.py  sql_database.py  sql_model.py
examples/custom-pipeline/claudia_gpt/encryption/: __init__.py  aes_gcm_encryptor.py  base_encryptor.py  catapa_jwt_util.py
examples/custom-pipeline/claudia_gpt/multi_tenant/: __init__.py
examples/custom-pipeline/claudia_gpt/reranker/: __init__.py  base_reranker.py  cohere_reranker.py  no_op_reranker.py
examples/custom-pipeline/claudia_gpt/utils/: caching.py  constant.py  file_utils.py  initializer.py  logger.py  (+1 more)
examples/custom-pipeline/components/: provider.py  ui.py
examples/custom-pipeline/mcp_pipeline/: .env.example  __init__.py  config.yaml  mcp_config.py  mcp_math.py  mcp_math_sse.py  pipeline.py  preset_config.py  response_synthesizer.py  state.py
examples/custom-pipeline/simple_pipeline/: __init__.py  pipeline.py  state.py
examples/custom-pipeline/template/: copier.yml
examples/custom-tool-and-agent/: Makefile  README.md  bosa_twitter_get_user_tool.py  bosa_twitter_tool.py  hello_agent_bosa_connector_example.py  hello_agent_bosa_twitter_example.py  hello_agent_example.py  hello_agent_mcp_example.py  hello_agent_mcp_glchat_example.py  hello_agent_mcp_glchat_sse_example.py  hello_agent_mcp_glchat_stdio_example.py  hello_agent_mcp_sse_example.py  hello_agent_mcp_stdio_example.py  hello_tool.py  local-start.bat  local-start.sh  mcp_client.py  pyproject.toml  run_example.sh  run_example_glchat.sh  run_example_glchat_sse.sh  run_example_glchat_stdio.sh  run_example_sse.sh  run_example_stdio.sh
examples/custom-tool-and-agent/client/: client.py  connection.py  tool.py
examples/custom-tool-and-agent/mcp_configs/: configs.py
examples/custom-tool-and-agent/mcp_tools/: glchat_tools_sse.py  glchat_tools_stdio.py  hello_tool_sse.py  hello_tool_stdio.py  math_tools_sse.py  math_tools_stdio.py  text_frequency_counter_sse.py  text_frequency_counter_stdio.py
examples/custom-tool-and-agent/sample_tools/: time_diff_tool.py  time_tool.py  weather_forecast_tool.py
examples/gen-ai-hello-world/: .env.example  README.md  local-start.bat  local-start.sh  pyproject.toml
examples/gen-ai-hello-world/gen_ai_hello_world/: __init__.py  main.py
examples/gen-ai-internal-hello-world/: .env.example  README.md  local-start.bat  local-start.sh  pyproject.toml
examples/gen-ai-internal-hello-world/gen_ai_internal_hello_world/: custom_data_store.py  main.py
examples/simple-pipeline/: .env.example  README.md  local-start.sh  main.py  pyproject.toml
examples/simple-pipeline/simple_pipeline/: config.yaml  main.py  pipeline.py  preset_config.py  state.py
(+95 files in other folders)
