[tool.poetry]
name = "simple-pipeline"
version = "0.0.1"
description = ""
authors = ["GenAI SDK Team <gat-sdk@gdplabs.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
poetry = "^2.1.3"

bosa-core-binary = { version = "^0.5.1", extras = ["all"] }
bosa-connectors-binary = ">=0.1.0,<0.2.0"
gllm-plugin-binary = ">=0.1.7,<0.2.0"
gllm-core-binary = "^0.3.0"
gllm-privacy-binary = "^0.2.0"
gllm-inference-binary = "^0.4.0"
gllm-datastore-binary = "^0.4.0"
gllm-misc-binary = "^0.5.0"
gllm-docproc-binary = "^0.3.0"
gllm-retrieval-binary = "^0.5.0"
gllm-generation-binary = "^0.4.0"
gllm-pipeline-binary = "^0.4.0"
gllm-rag-binary = "^0.3.2"
langchain-mcp-adapters = "^0.1.0"

[project]
name = "simple-pipeline"
version = "0.0.1"
description = ""
authors = [
    { name = "GenAI SDK Team", email = "gat-sdk@gdplabs.id" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bosa-core-binary>=0.5.1",
    "bosa-connectors-binary>=0.1.0,<0.2.0",
    "gllm-plugin-binary>=0.1.7,<0.2.0",
    "gllm-core-binary>=0.3.0",
    "gllm-privacy-binary>=0.2.0",
    "gllm-inference-binary>=0.4.0",
    "gllm-datastore-binary>=0.4.0",
    "gllm-misc-binary>=0.5.0",
    "gllm-docproc-binary>=0.3.0",
    "gllm-retrieval-binary>=0.5.0",
    "gllm-generation-binary>=0.4.0",
    "gllm-pipeline-binary>=0.4.0",
    "gllm-rag-binary (>=0.3.2,<0.4.0)",
    "langchain-mcp-adapters>=0.1.0,<0.2.0",
    "copier (>=9.8.0,<10.0.0)",
]

[[tool.poetry.source]]
name = "gen-ai"
url = "https://asia-southeast2-python.pkg.dev/gdp-labs/gen-ai/simple/"
priority = "supplemental"

[[tool.poetry.source]]
name = "gen-ai-publication"
url = "https://asia-southeast2-python.pkg.dev/gdp-labs/gen-ai/"
priority = "explicit"
