[tool.poetry]
name = "custom-tool-and-agent"
version = "0.1.0"
description = ""
authors = ["raymond.christopher <raymond.christopher@gdplabs.id>", "fachriza.adhiatma <fachriza.d.adhiatma@gdplabs.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

gllm-plugin = {git = "ssh://git@github.com:GDP-ADMIN/gen-ai-external.git", subdirectory = "libs/gllm-plugin"}
gllm-agents = {git = "ssh://git@github.com/GDP-ADMIN/gen-ai-internal.git", branch = "f/migrate-gllm-agents-from-gen-ai-template", subdirectory = "libs/gllm-agents"}

[[tool.poetry.source]]
name = "gen-ai"
url = "https://asia-southeast2-python.pkg.dev/gdp-labs/gen-ai/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
