[tool.poetry]
name = "custom-tool-and-agent"
version = "0.1.0"
description = ""
authors = ["raymond.christopher <raymond.christopher@gdplabs.id>", "fachriza.adhiatma <fachriza.d.adhiatma@gdplabs.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

gllm-plugin-binary = "0.0.5"
gllm-agents-binary = "0.0.1b5"

[[tool.poetry.source]]
name = "gen-ai"
url = "https://asia-southeast2-python.pkg.dev/gdp-labs/gen-ai/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
