[tool.poetry]
name = "simple-pipeline"
version = "0.0.1"
description = ""
authors = ["GenAI SDK Team <gat-sdk@gdplabs.id>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
gllm-plugin = {version = "0.0.1b3", source = "gen-ai-external"}

[[tool.poetry.source]]
name = "gen-ai-external"
url = "https://asia-southeast2-python.pkg.dev/gdp-labs/gen-ai-external/simple/"
priority = "explicit"