[tool.poetry]
name = "web_search_agent"
version = "0.1.0"
description = "WebSearchAgent Agent - A2A Compliant"
authors = ["Christian Trisno Sen Long Chen <christian.t.s.l.chen@gdplabs.id>"]
readme = "README.md"
packages = [{include = "web_search_agent"}]
package-mode = false # Important for not trying to install the agent itself as a package

[tool.poetry.dependencies]
python = ">=3.11,<3.14"

# Core A2A and agent libraries
gllm-agents-binary = "0.2.15"

# LangChain (optional, but common for LLM agents)
langchain = "^0.3.0"
langchain_openai = "^0.3.0"
langgraph = "^0.2.16"

# Other useful libraries (add as needed)
python-dotenv = "^1.0.0"
langchain-community = "^0.3.24"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
